@@ -1,3 +1,11 @@
+2008-08-23  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/blinds.py.in
+	(TestBlinds.test11_sixPlayers_fiveSitsOutForALongTime): Added
+	rebuy in each iteration of loop.
+	(PokerPredefinedDecks): brought over deck class from history.py.in
+	(TestBlinds.setUp): Added use of predefined decks.
+
 2008-08-22  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/blinds.py.in
